update and re-origanization code